--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="red">#ff4444</color>
+    <color name="warning_red">#77ff4444</color>
     <color name="black">#FF000000</color>
     <color name="gray">#aaaaaa</color>
     <color name="white">#FFFFFFFF</color>
