--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="red">#ff4444</color>
     <color name="warning_red">#77ff4444</color>
+    <color name="ok_area">#44008888</color>
     <color name="black">#FF000000</color>
     <color name="gray">#aaaaaa</color>
     <color name="white">#FFFFFFFF</color>
