--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,10 @@
     <color name="warning_red">#77ff4444</color>
     <color name="ok_area">#44008888</color>
     <color name="black">#FF000000</color>
-    <color name="gray">#aaaaaa</color>
+    <color name="middle_gray">#DDDDDD</color>
+    <color name="gray">#B9B9B9</color>
+    <color name="dark_gray">#444444</color>
+    <color name="black_gray">#343434</color>
     <color name="white">#FFFFFFFF</color>
 
 </resources>
