--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
         android:text="&quot;I can calculate the motion of heavenly bodies, but not the madness of people.&quot; - Issac Newton -"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/newtone" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/newtone"
         android:layout_width="227dp"
         android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,5 +38,71 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1"
         app:srcCompat="@drawable/newton" />
+
+    <ImageView
+        android:id="@+id/bird"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:rotation="180"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bird" />
+
+    <ImageView
+        android:id="@+id/bird2"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:scaleX="-1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/bird" />
+
+    <ImageView
+        android:id="@+id/bird3"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="110dp"
+        android:rotation="-90"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bird" />
+
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="@+id/newtone"
+        app:layout_constraintStart_toStartOf="@+id/newtone"
+        app:layout_constraintTop_toTopOf="@+id/newtone"
+        app:srcCompat="@drawable/star" />
+
+    <ImageView
+        android:id="@+id/jake"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/jake" />
+
+    <ImageView
+        android:id="@+id/pop1"
+        android:layout_width="300dp"
+        android:layout_height="360dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/pop" />
+
+    <ImageView
+        android:id="@+id/dollar"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:rotation="20"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/dollar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
